@@ -2,3 +2,4 @@
 NEW
     - Added a toggle for target, target target, focus and focus target castbar
     - Added option to show a separate energy bar for some bosses like Anduin at the objectives boss frames
+    - Added Details skin (by SHOODOX)
