@@ -612,6 +612,7 @@ GW_DEFAULT["WEEKLY_REWARDS_SKIN_ENABLED"] = true
 GW_DEFAULT["LFG_SKIN_ENABLED"] = true
 GW_DEFAULT["ORDERRHALL_TALENT_FRAME_SKIN_ENABLED"] = true
 GW_DEFAULT["LOOTFRAME_SKIN_ENABLED"] = true
+GW_DEFAULT["DETAILS_SKIN_ENABLED"] = true
 
 GW_DEFAULT["USE_BATTLEGROUND_HUD"] = true
 
