@@ -2,6 +2,7 @@
 NEW
     - Added a toggle for target, target target, focus and focus target castbar
     - Added option to show a separate energy bar for some bosses like Anduin at the objectives boss frames
+    - Added Details skin (by SHOODOX)
 
 5.27.1
 FIXES
